On branch main  Changes to be committed: 	modified:   CHANGELOG.md 	modified:   README.md 	modified:   package.json 	modified:   public/admin/dashboard.html 	modified:   public/css/styles.css 	modified:   public/index.html 	modified:   public/login.html 	modified:   public/station-old.html 	modified:   public/station.html 	modified:   public/station/dashboard.html 	modified:   public/stations.html 	modified:   public/version-manifest.json

--- a/public/stations.html
+++ b/public/stations.html
@@ -28,7 +28,7 @@
         .auth-required {
             display: none;
             min-height: 100vh;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #059669 0%, #064e3b 100%);
             color: white;
             text-align: center;
             padding: 2rem;
@@ -57,7 +57,7 @@
         }
 
         .user-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #059669 0%, #064e3b 100%);
             color: white;
             padding: 1.5rem 0;
             margin-bottom: 2rem;
