--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #059669 0%, #064e3b 100%);
             color: white;
             display: flex;
             align-items: center;
