--- a/public/station-old.html
+++ b/public/station-old.html
@@ -25,7 +25,7 @@
     
     <style>
         .station-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #059669 0%, #064e3b 100%);
             color: white;
             padding: 2rem 0;
             margin-bottom: 2rem;
